test/should_not_compile/invalid-bound-name2.sml
val op = as _ = 123;
print (Int.toString (op =));
